<resources>
    <string name="app_name">Music Park</string>
    <string name="your_likes">Your likes</string>
    <string name="regional">Regional</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="ready_for_a_new_experience">Ready for a new experience?</string>
    <string name="recommended">Recommended</string>
    <string name="top_global">Top Global</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="msg_registration_success">Account created successfully</string>
    <string name="err_pass_no_match">The passwords do not match</string>
    <string name="err_pass_format">The password must contain at least one letter, one number, and one special character.</string>
    <string name="err_pass_long">The password must be at least 8 characters long</string>
    <string name="music_park">Music Park</string>
    <string name="welcome_to_music_park">Welcome to Music Park</string>
    <string name="all_your_music_in_one_place">All your music, in one place</string>
    <string name="email">Email</string>
    <string name="your_email_address">your@email.address</string>
    <string name="password">Password</string>
    <string name="passwordExample">••••••••</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_your_account">Create your account</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="favorite">Favorite</string>
    <string name="play">Play</string>
    <string name="regional_recommendations">Regional Recommendations</string>
    <string name="the_most_listened_to_in_your_area">The most listened to in your area</string>
    <string name="turn_on_location">Turn on location</string>
    <string name="no_results">No result</string>
    <string name="error_server_response">Server response error</string>
    <string name="network_error">Network error</string>
    <string name="no_official_playlist_found">No official playlist was found for your country</string>
    <string name="error_searching_id">Error searching for ID</string>
    <string name="regional_playlist_empty">The regional playlist is empty</string>
    <string name="no_songs_found">No songs found</string>
    <string name="err_location_required">Required location</string>
    <string name="API_state">API State</string>
    <string name="location_disabled">Location disabled</string>
    <string name="seeking_success_in">Seeking success in:</string>
    <string name="the_exact_province_could_not_be_determined">The exact province could not be determined</string>
    <string name="error_translate_location">Network error translating location</string>
    <string name="location_could_not_be_obtained">Location could not be obtained. Please enable GPS</string>
    <string name="sensor_error">Sensor error:</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="err_empty_fields">All fields are required</string>
    <string name="err_email_format">Please enter a valid email address</string>
    <string name="err_user_not_found">User not found</string>
    <string name="err_wrong_password">Wrong password</string>
    <string name="remember_me">Remember me</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="no_favorites">You don\'t have any favorite songs</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="removed_from_favorites">Song removed from favorites</string>
    <string name="options">Options</string>
    <string name="song_count_single">1 song</string>
    <string name="song_count_multiple">%1$d songs</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_row">Add to row</string>
    <string name="remove_from_this_playlist">Remove from this playlist</string>
    <string name="save_in">Save in</string>
    <string name="search_playlist">Search playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="give_your_playlist_a_name">Give your playlist a name</string>
    <string name="mi_playlist">My playlist</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="library">Library</string>
    <string name="empty_playlist">Empty playlist</string>
    <string name="added_to_playlist">The song was added to your playlist</string>
    <string name="removed_from_playlist">Song removed from playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="are_you_sure_you_want_to_delete_this_playlist">Are you sure you want to delete the playlist \'%s\' and all its songs?</string>
    <string name="delete">Delete</string>
    <string name="you_cannot_delete_your_favorites_list">You cannot delete your Favorites list</string>
    <string name="added_to_queue">Add to row</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="user_name">User Name</string>
    <string name="change_user_name">Change User Name</string>
    <string name="log_out">Log Out</string>
    <string name="likes">LIKES</string>
    <string name="playlists">PLAYLISTS</string>
    <string name="delete_account">Delete Account</string>
    <string name="password_updated">Password updated</string>
    <string name="account_deleted">Account deleted</string>
    <string name="logged_out">Logged out</string>
    <string name="delete_user">Delete User</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="name_changed">Name updated</string>
    <string name="camera">Use Camera</string>
    <string name="gallery">Choose from the gallery</string>
    <string name="select_an_option">Select an option</string>
    <string name="err_reading_image">Error reading the image</string>
    <string name="log_out_confirmation">Are you sure you want to log out?</string>
    <string name="yes_go_out">Yes, log out</string>
    <plurals name="song_count">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="what_do_you_want_to_listen_to">What do you want to listen to?</string>
    <string name="err_email_exists">This email is already registered</string>
    <string name="playlist_deleted">Playlist Deleted</string>
    <string name="playlist_created_success">Playlist successfully created</string>
    <string name="rock">Rock</string>
    <string name="pop">Pop</string>
    <string name="trap">Trap</string>
    <string name="latin">Latin</string>
    <string name="romantic">Romantic</string>
    <string name="unknown_genre">Unknown_genre</string>
    <string name="folklore">Folklore</string>
    <string name="cumbia">Cumbia</string>
    <string name="cuarteto">Quartet</string>

</resources>